# irisNN

./: app.py  best_model.pth  final_mnist_classifier.pth  main.py  mnist.py  mnist_classifier.pth  pyproject.toml
templates/: index.html
